--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-<% if flash[:errors] %>
-  <ul>
-    <% flash[:errors].each do |error| %>
-      <li><%= error %></li>
-    <% end %>
-  </ul>
-<% end %>
-
 <section class="content">
+  <section id="flashes">
+    <section id="error-sec"></section>
+    <section id="notice-sec"></section>
+  </section>
+
+
   <section id="sidebar-sec">
   </section>
 
