--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,9 @@
+/* Colors:
+
+notice green: #35D4B7
+error red:    #
+everything pink: #f280a1 */
+
 /* reset */
 
 div, section, article, main, h1, h2, h3, h4, p, a, form, button, input,
@@ -54,6 +60,10 @@ em {
   color: #f280a1;
 }
 
+a:hover {
+  color: #f280a1;
+}
+
 section.content {
   min-height: 500px;
   position: relative;
@@ -72,17 +82,19 @@ section.content {
 }
 
 .selected {
-  background: #ccc;
+  background: #ddd;
 }
 
 .message {
-  display: block;
+  position: absolute;
   font-weight: bold;
   font-size: 24px;
   width: 400px;
   text-align: center;
-  margin-left: 200px;
+  margin-left: 220px;
+  margin-top: 20px;
   padding: 5px 10px;
+  z-index: 1;
 }
 
 
@@ -375,7 +387,7 @@ article.entry {
 /* Category list and edit styles */
 .category-list-item {
   display: block;
-  width: 300px;
+  width: 400px;
   padding: 10px 20px;
   border: 1px solid #999;
   border-radius: 5px;
@@ -432,6 +444,7 @@ article.entry {
   margin-top: 30px;
 }
 
+
 .cat-feed-list-container {
   width: 400px;
   margin-left: 150px;
@@ -443,10 +456,13 @@ article.entry {
 }
 
 
+.cat-list-item {
+  width: 400px;
+}
 
 .new-category {
   display: block;
-  width: 300px;
+  width: 400px;
   font-size: 18px;
   font-weight: bold;
   padding: 10px 20px;
@@ -655,8 +671,35 @@ p.user-description {
   text-align: center;
 }
 
+.close-modal:hover {
+  background: #777;
+  color: #ccc;
+}
+
 .key-list {
     display: block;
     width: 500px;
     margin: 20px;
+    margin-left: 30px;
+
+}
+
+/* Flash */
+
+.notice-message {
+  color:  #84D66F;
+  border: 1px solid #5DAD49;
+  background: #ccc;
+  opacity: 1;
+  border-radius: 5px;
+  text-shadow: 1px 1px #666, 1px -1px #666, -1px -1px #666, -1px 1px #666;
+}
+
+.error-message {
+  color:  #6EC9D4;
+  border: 1px solid #59A3AB;
+  background: #ccc;
+  opacity: 1;
+  border-radius: 5px;
+  text-shadow: 1px 1px #666, 1px -1px #666, -1px -1px #666, -1px 1px #666;
 }
