--- a/app/assets/templates/comments/show.jst.ejs
+++ b/app/assets/templates/comments/show.jst.ejs
@@ -1,7 +1,13 @@
 <p class="comment-body"><%= comment.escape("body") %></p>
 <p class="commenttauthor">posted by <em><%= comment.escape("author") %></em>
+
   <% if (this.model.isAboutCurrUser() || this.model.isByCurrUser()) { %>
-  <button class="remove-comment delete" data-id=<%=comment.id%>>x</button>
+    <button class="remove-comment delete"
+            data-id="<%=comment.id%>">x</button>
+  <% } %>
+  <% if (this.model.isByCurrUser()) { %>
+    <button class="edit-comment edit"
+            data-id="<%=comment.id%>">Edit</button>
   <% } %>
 </p>
 <p class="comment-time">
