Implements comments on entries.

--- a/app/assets/templates/entries/show.jst.ejs
+++ b/app/assets/templates/entries/show.jst.ejs
@@ -13,3 +13,5 @@
 <% if (jsonEntry.author) { %>
   <label class="entry-author"><%= jsonEntry.author%></p>
 <% } %>
+
+<a href="#" class="toggle-comments">comments</a>
