--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -24,4 +24,6 @@
   <button class="follow-btn"><%= buttonText %></button>
   </section>
 
+  <a href="#" class="toggle-comments">Comments</a>
+
 </section>
