--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,17 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require reset
+ *= require general
+ *= require main_layout
+ *= require sidebar
+ *= requrie flash
+ *= require user
+ *= require feed
+ *= require entry
+ *= require category
+ *= require modal
+ *= require comment
+ *= require_tree .
  */
