Adds media queries to entry list and user index.

--- a/app/assets/stylesheets/entry.css
+++ b/app/assets/stylesheets/entry.css
@@ -78,3 +78,17 @@ article.entry {
   text-align: center;
   margin-top: 10px;
 }
+
+@media (max-width: 1200px) {
+  .entry-list-elem .entry-feed {
+    width: 1000px;
+  }
+
+  .entry-list-elem .entry-title {
+    width: 1000px;
+  }
+
+  .entry-list-elem time {
+    width: 1000px;
+  }
+}
