--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -104,3 +104,15 @@ p.user-description {
   width: 1100px;
   margin: auto;
 }
+
+@media (max-width: 1300px) {
+  .user-list-container {
+    width: 800px;
+  }
+}
+
+@media (max-width: 930px) {
+   .user-list-container {
+     width: 500px;
+   }
+}
