Implements initial version of a progress bar.

--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -1,3 +1,5 @@
+<div id="progressbar"></div>
+
 <% entries.forEach(function (entry) { %>
 <li class="entry-list-elem group">
   <a href="#/feeds/<%= entry.escape('feed_id') %>"
