--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <section id="flashes">
     <section id="error-sec"></section>
     <section id="notice-sec"></section>
+    <div id="progressbar"></div>
   </section>
 
 
