Adds basic pagination to speed up views.

--- a/app/assets/templates/entries/list.jst.ejs
+++ b/app/assets/templates/entries/list.jst.ejs
@@ -9,3 +9,5 @@
   <article class="entry closed" id="article-entry-<%= entry.id %>" data-id="<%= entry.id %>"></article>
 </li>
 <% }); %>
+
+<a href="#" class="next-page-link">Next</a>
