--- a/app/assets/templates/sidebar/not_logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/not_logged_in.jst.ejs
@@ -7,4 +7,15 @@
       <li class="nav-list-item">
         <a href="#/session/new">Sign In</a>
       </li>
+      <li class="nav-list-item">
+          <form class="demo-user-form">
+
+            <input type="hidden" id="user_username" name="user[username]" value="test">
+
+            <input type="hidden" id="user_password" name="user[password]" value="123456">
+
+            <input class="demo-user-submit" type="submit" value="Demo User">
+
+          </form>
+        </li>
     </ul>
