--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require jquery-ui/progressbar
  *= require_self
+ *= require font-awesome
  *= require reset
  *= require general
  *= require main_layout
