--- a/app/assets/templates/entries/show.jst.ejs
+++ b/app/assets/templates/entries/show.jst.ejs
@@ -14,4 +14,4 @@
   <label class="entry-author"><%= jsonEntry.author%></p>
 <% } %>
 
-<a href="#" class="toggle-comments">comments</a>
+<a href="#" class="toggle-comments"><i class="fa fa-comment"></i></a>
