--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -25,7 +25,7 @@
   </section>
 
   <section class="profile-comments">
-    <a href="#" class="toggle-comments">Comments</a>
+    <a href="#" class="toggle-comments"><i class="fa fa-comment"></i></a>
   </section>
 
 </section>
