--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
 
   <main class="display">
     <%= yield %>
-    <div id="progressbar"></div>
   </main>
+  <section class="progressbar-container">
+    <div id="progressbar"></div>
+  </section>
 
   <section id="modal-sec">
   </section>
