--- a/app/assets/stylesheets/main_layout.css
+++ b/app/assets/stylesheets/main_layout.css
@@ -42,8 +42,8 @@ header {
 .banner {
   font-size: 84px;
   text-align: center;
-  width: 700px;
-  padding: 50px 100px;
+  width: 400px;
+  padding: 50px;
   margin: auto;
   margin-top: 100px;
 
