--- a/app/assets/templates/sidebar/not_logged_in.jst.ejs
+++ b/app/assets/templates/sidebar/not_logged_in.jst.ejs
@@ -1,21 +1,25 @@
-  <h3 class="logo">FeedMe</h3>
+<i class="fa fa-align-justify fa-2x menu-icon"></i>
 
-    <ul class="nav-list">
-      <li class="nav-list-item">
-        <a href="#/users/new">Sign Up</a>
+<div id="sidebar-content" class="closed">
+  <h3 class="logo ">FeedMe</h3>
+
+  <ul class="nav-list ">
+    <li class="nav-list-item ">
+      <a href="#/users/new" class="sidebar-link">Sign Up</a>
+    </li>
+    <li class="nav-list-item">
+      <a href="#/session/new" class="sidebar-link">Sign In</a>
+    </li>
+    <li class="nav-list-item">
+        <form class="demo-user-form">
+
+          <input type="hidden" id="user_username" name="user[username]" value="test">
+
+          <input type="hidden" id="user_password" name="user[password]" value="123456">
+
+          <input class="demo-user-submit" type="submit" value="Demo User">
+
+        </form>
       </li>
-      <li class="nav-list-item">
-        <a href="#/session/new">Sign In</a>
-      </li>
-      <li class="nav-list-item">
-          <form class="demo-user-form">
-
-            <input type="hidden" id="user_username" name="user[username]" value="test">
-
-            <input type="hidden" id="user_password" name="user[password]" value="123456">
-
-            <input class="demo-user-submit" type="submit" value="Demo User">
-
-          </form>
-        </li>
-    </ul>
+  </ul>
+</div>
