--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -10,6 +10,12 @@
   border-right: 1px solid grey;
   padding: 20px;
   transition: width 0.4s ease;
+  z-index: 1;
+  opacity: .8;
+}
+
+.sidebar:hover > .menu-icon {
+  display: none;
 }
 
 
@@ -22,6 +28,9 @@
 }
 
 
+.sidebar:hover {
+  width: 150px;
+}
 
 .sidebar .nav-list {
   margin-top: 30px;
@@ -29,9 +38,6 @@
   font-weight: bold;
 }
 
-.sidebar:hover > .menu-icon {
-  display: none;
-}
 
 .menu-icon {
   display: block;
@@ -86,9 +92,4 @@
   margin: 0;
   padding: 2px;
   width: 130px;
-}
-
-
-.sidebar:hover {
-  width: 150px;
 }
